update index.html to use default layout

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<html>
-  <head>
-  
-  </head>
-  <body>
-  
-  </body>
-</html>
+---
+layout: default
+---
+
+<h1>This is using the default layout.</h1>
