--- a/index.html
+++ b/index.html
@@ -49,6 +49,26 @@ layout: default
                     {% endif %}
                 {% assign tags_list = nil %}
             </ul>
+            <h5>Tags</h5>
+            <ul class="list-group">
+                {% assign tags_list = site.tags %}  
+                    {% if tags_list.first[0] == null %}
+                    {% for tag in tags_list %} 
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <a href="#{{ tag }}" class="text-dark"></a>{{ tag | capitalize }}</a>
+                            <span class="badge badge-secondary">{{ site.tags[tag].size }}</span>
+                        </li>
+                    {% endfor %}
+                    {% else %}
+                    {% for tag in tags_list %} 
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <a href="#{{ tag[0] }}" class="text-dark">{{ tag[0] | capitalize }}</a>
+                            <span class="badge badge-secondary">{{ tag[1].size }}</span>
+                        </li>
+                    {% endfor %}
+                    {% endif %}
+                {% assign tags_list = nil %}
+            </ul>
         </aside>
     </div>
 </div>
