--- a/index.html
+++ b/index.html
@@ -50,25 +50,20 @@ layout: default
                 {% assign tags_list = nil %}
             </ul>
             <h5>Tags</h5>
-            <ul class="list-group">
+            <div class="h4">
                 {% assign tags_list = site.tags %}  
-                    {% if tags_list.first[0] == null %}
-                    {% for tag in tags_list %} 
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a href="#{{ tag }}" class="text-dark"></a>{{ tag | capitalize }}</a>
-                            <span class="badge badge-secondary">{{ site.tags[tag].size }}</span>
-                        </li>
-                    {% endfor %}
-                    {% else %}
-                    {% for tag in tags_list %} 
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a href="#{{ tag[0] }}" class="text-dark">{{ tag[0] | capitalize }}</a>
-                            <span class="badge badge-secondary">{{ tag[1].size }}</span>
-                        </li>
-                    {% endfor %}
-                    {% endif %}
-                {% assign tags_list = nil %}
-            </ul>
+                {% if tags_list.first[0] == null %}
+                {% for tag in tags_list %} 
+                    <a href="#{{ tag }}" class="badge badge-light text-muted">{{ tag | capitalize }}</a>
+                {% endfor %}
+                {% else %}
+                {% for tag in tags_list %}
+                    
+                    <a href="#{{ tag[0] }}" class="badge badge-light text-muted">{{ tag[0] | capitalize }}</a>
+                {% endfor %}
+                {% endif %}
+            {% assign tags_list = nil %}
+            </div>
         </aside>
     </div>
 </div>
