--- a/index.html
+++ b/index.html
@@ -30,39 +30,47 @@ layout: default
     <div class="col-sm-4">
         <aside>
             <h5>Categories</h5>
-            <ul class="list-group">
-                {% assign tags_list = site.categories %}  
-                    {% if tags_list.first[0] == null %}
-                    {% for tag in tags_list %} 
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a href="#{{ tag }}" class="text-dark"></a>{{ tag | capitalize }}</a>
-                            <span class="badge badge-secondary">{{ site.tags[tag].size }}</span>
-                        </li>
-                    {% endfor %}
-                    {% else %}
-                    {% for tag in tags_list %} 
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a href="#{{ tag[0] }}" class="text-dark">{{ tag[0] | capitalize }}</a>
-                            <span class="badge badge-secondary">{{ tag[1].size }}</span>
-                        </li>
-                    {% endfor %}
-                    {% endif %}
-                {% assign tags_list = nil %}
-            </ul>
+            {% assign category_list = site.categories %}  
+                {% if category_list.first[0] == null %}
+                {% for category in category_list %} 
+                    <div class="row">
+                        <div class="col">
+                            <a href="#{{ category }}" class="text-dark text-uppercase"></a>{{ category | capitalize }}</a>
+                        </div>
+                        <div class="col text-right">
+                            <span class="badge badge-light">{{ category_list[category].size }}</span>
+                        </div>
+                    </div>
+                    <hr />
+                {% endfor %}
+                {% else %}
+                {% for category in category_list %} 
+                    <div class="row">
+                        <div class="col">
+                            <a href="#{{ category[0] }}" class="text-muted text-uppercase">{{ category[0] | capitalize }}</a>
+                        </div>
+                        <div class="col text-right">
+                            <span class="badge badge-light">{{ category[1].size }}</span>
+                        </div>
+                    </div>
+                    <hr />
+                {% endfor %}
+                {% endif %}
+            {% assign category_list = nil %}
             <h5>Tags</h5>
             <div class="h4">
-                {% assign tags_list = site.tags %}  
-                {% if tags_list.first[0] == null %}
-                {% for tag in tags_list %} 
+                {% assign category_list = site.tags %}  
+                {% if category_list.first[0] == null %}
+                {% for tag in category_list %} 
                     <a href="#{{ tag }}" class="badge badge-light text-muted">{{ tag | capitalize }}</a>
                 {% endfor %}
                 {% else %}
-                {% for tag in tags_list %}
+                {% for tag in category_list %}
                     
                     <a href="#{{ tag[0] }}" class="badge badge-light text-muted">{{ tag[0] | capitalize }}</a>
                 {% endfor %}
                 {% endif %}
-            {% assign tags_list = nil %}
+            {% assign category_list = nil %}
             </div>
         </aside>
     </div>
