add unpaginated post list

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="row">
     <div class="col-sm-8">
-        {% include paginatedpostlist.html %}
+        {% include postlist.html %}
     </div>
     <div class="col-sm-4">
         {% include sidebar.html %}
